gitops/apps/supabase/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: supabase
  labels:
    name: supabase
